# make_vr

./: .gitignore  LICENSE  README.md  example.make_vr.toml  pyproject.toml  requirements.txt  requirements2.txt  setup.py
make_vr/: __main__.py  audio.py  config.py  filters.py  fs.py  image.py  shell.py  video.py
src/make_vr/: __main__.py  audio.py  cache.py  config.py  fs.py  image.py  shell.py  task.py  tools.py  video.py
src/make_vr/tools/: __init__.py  types.py
